--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,107 +1,287 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+header {
+    top: 0;
+    padding: 5px 70px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;;
+    justify-content: space-between;
+    align-items: center;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+.header-home {
+    background-color: rgba(0, 0, 0, 0);
+    backdrop-filter: blur(1px);
+}
+.header-page,
+.footer-page {
+    background-color: #212121;
+    backdrop-filter: blur(1px);
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+.header-img {
+    height: 50px;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.header-img__icon {
+    width: 45px;
+    height: 45px;
+    object-fit: cover;
+    color: #dedede;
+}
+
+header nav {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 320px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+header nav a {
+    text-decoration: none;
+    color: #dedede;
+    transition: 0.3s linear;
+    text-transform: uppercase;
+}
+
+header nav a:hover {
+    color: #ffffff;
+    text-shadow: 1px 1px 2px rgba(106, 74, 238, 0.71), 0 0 1em #ffffff, 0 0 0.2em #ffffff;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.homePage {
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(0deg, rgba(0, 0, 0) 0%, rgba(255,255,255,0) 15%, rgba(255,255,255,0) 85%, rgb(0, 0, 0, 0.85) 100%), url("../public/background_landing.jpg");
+    margin-top: -60px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.homePage__content {
+    position: absolute;
+    margin-top: 150px;
+    margin-left: 100px;
+}
+
+.homePage__content__description {
+    font-size: 20px;
+    letter-spacing: 5px;
+    font-weight: bold;
+    color: #dedede;
+    text-transform: uppercase;
+}
+
+.homePage__content__title {
+    font-size: 24px;
+    width: 605px;
+    font-weight: bold;
+    color: #ffffff;
+    text-transform: uppercase;
+    margin-top: 130px;
+}
+
+.homePage__btn {
+    background-color: #dedede;
+    color: #262626;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    border: none;
+    border-radius: 40px;
+}
+
+.homePage__content__button {
+    margin-top: 100px;
+}
+
+.homePage__btn:hover {
+    background-color: white;
+    color: #262626;
+    box-shadow: 1px 1px 2px rgb(0, 5, 255), 0 0 1em #ffffff, 0 0 0.2em #ffffff;
+}
+
+.products__title,
+.about__title {
+    font-size: 20px;
+    color: #212121;
+    text-transform: uppercase;
+    margin: 10px 0;
+}
+
+#products__title-id,
+#about__title-id {
+    font-weight: 500;
+}
+
+.products__content,
+.product__container {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.products__list {
+    width: 90%;
+}
+
+.each-slide-effect {
+    padding: 70px 200px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;;
+    flex-direction: row;
+    justify-content: space-around;
+    text-decoration: none;
+    border: none;
+    transition: 0.3s linear;
+    align-items: center;
+}
+
+.products__title-info {
+    width: 450px;
+}
+
+.each-slide-effect h1 {
+    font-size: 36px;
+    color: #212121;
+}
+
+.each-slide-effect h2 {
+    font-size: 24px;
+    color: #6c6c6c;
+}
+
+.each-slide-effect img {
+    width: 300px;
+    height: 412.5px;
+}
+
+.product__content {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    width: 80%;
+    padding: 100px;
+}
+
+.product__content-info {
+    width: 450px;
+}
+
+.product__content-details span{
+    color: #858585;
+}
+
+.product__content-details h1,
+.product__content-details h2,
+.product__content-details p {
+    margin-top: 0;
+}
+
+.product__content-details h1 {
+    font-size: 40px;
+    color: #212121;
+}
+
+.product__content-details h2 {
+    font-size: 30px;
+    color: #434343;
+}
+
+.product__content-details p {
+    font-size: 18px;
+    color: #616161;
+}
+.about__container {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 50vh;
+}
+.about__icon {
+    width: 100px!important;
+    height: 100px!important;
+    margin: 25px;
+    transition: 0.2s linear;
+}
+
+.about__icon:hover {
+    transform: scale(1.3);
+}
+
+.notFound__container {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 40vh;
+}
+
+.notFound__container span {
+    font-size: 160px;
+    color: #212121;
+    font-weight: bold;
+}
+.notFound__countdown {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 50%;
+}
+
+.back-btn {
+    position: absolute !important;
+    bottom: 70px;
+    color: #212121 !important;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;;
+    justify-content: center;
+    align-items: center;
+    color: #dedede;
+    backdrop-filter: blur(2px);
 }
